FIXED:Loadmore alignment issue

--- a/blocks/src/editor.scss
+++ b/blocks/src/editor.scss
@@ -276,7 +276,7 @@ a.awsm-b-job-item {
 }
 
 .awsm-b-row .awsm-b-jobs-pagination {
-	//padding: 0 15px;
+	padding: 0 15px;
 	width: 100%;
 }
 
@@ -908,6 +908,7 @@ ul.awsm-error-message li {
 .awsm-b-stack-item {
 	width: 100%;
 	margin-bottom: 30px;
+	padding: 0 15px;
 }
 
 .awsm-b-stack-item .awsm-b-job-item {
